force-app/main/default/objects/Denomination__c/Denomination__c.object-meta.xml
<CustomObject>
    <label>Denomination</label>
    <nameField>
        <displayFormat>D-{00000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Denominations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>