force-app/main/default/objects/Denomination__c/fields/Denomination_Value__c.field-meta.xml
<CustomField>
    <fullName>Denomination_Value__c</fullName>
    <label>Denomination Value</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>