force-app/main/default/objects/Denomination__c/fields/Financial_Account_Transaction__c.field-meta.xml
<CustomField>
    <fullName>Financial_Account_Transaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Financial Account Transaction Orignal</label>
    <referenceTo>FinancialAccountTransaction</referenceTo>
    <relationshipLabel>Denominations</relationshipLabel>
    <relationshipName>Denominations</relationshipName>
    <type>Lookup</type>
</CustomField>